fixed design on mobile, i think

--- a/index.css
+++ b/index.css
@@ -1,7 +1,16 @@
-body{
+html{
+    overscroll-behavior: none;
 }
 canvas{
     width: 100%;
     /* TODO: find a better dynamic sizing solution */
     height: calc(100% - 100px);
+}
+@media only screen and (max-width: 600px) {
+    h1{
+        font-size: 4rem;
+    }
+    h4{
+        font-size: 2rem;
+    }
 }
